@@ -1,113 +1,0 @@
-;; -*- lexical-binding: t; -*-
-
-(require 'dash)
-(require 'starhugger)
-
-;;; Commentary:
-
-;;; Code:
-
-(defun starhugger--post-process-content
-    (generated-text &optional notify-end prompt)
-  (-->
-   generated-text
-   (if starhugger-strip-prompt-before-insert
-       (string-remove-prefix prompt it)
-     it)
-   (if starhugger-chop-stop-token
-       (-let* ((end-flag (string-suffix-p starhugger-stop-token it)))
-         (when (and end-flag notify-end)
-           (message "%s received from %s !"
-                    starhugger-stop-token
-                    starhugger-model-api-endpoint-url))
-         (if end-flag
-             (string-remove-suffix starhugger-stop-token it)
-           it))
-     it)))
-
-;;;###autoload
-(cl-defun starhugger-query (prompt &rest args &key beg-pos end-pos display force-new)
-  "Interactive send PROMPT to the model.
-Non-nil END-POS (interactively when prefix arg: active region's
-end of current point): insert the parsed response there. BEG-POS:
-the beginning of the prompt area. Non-nil DISPLAY: displays the
-parsed response. FORCE-NEW: disable caching (options
-wait_for_model), interactively: PROMPT equals the old one. ARGS
-is optional arguments."
-  (interactive (-let* ((prompt
-                        (read-string "Prompt: "
-                                     (and (use-region-p)
-                                          (buffer-substring-no-properties
-                                           (region-beginning) (region-end))))))
-                 (list
-                  prompt
-                  :end-pos (and current-prefix-arg
-                                (if (use-region-p)
-                                    (region-end)
-                                  (point)))
-                  :display t
-                  :force-new (equal starhugger-query--last-prompt prompt))))
-  (-let* ((pt0 (or end-pos (point)))
-          (call-buf (current-buffer))
-          (modftick (buffer-modified-tick))
-          (callback
-           (lambda (gen-texts)
-             (with-current-buffer call-buf
-               (setq starhugger-query--last-prompt prompt)
-               (-let* ((pt1 (point))
-                       (first-gen-text (cl-first gen-texts))
-                       (insert-action
-                        (and end-pos
-                             (equal modftick (buffer-modified-tick))
-                             (lambda ()
-                               (insert
-                                (starhugger--post-process-content
-                                 first-gen-text
-                                 (or end-pos display) prompt))
-                               (run-hooks 'starhugger-post-insert-hook)))))
-                 (when insert-action
-                   (if (= pt0 pt1)
-                       (progn
-                         (deactivate-mark)
-                         (funcall insert-action))
-                     (save-excursion
-                       (goto-char pt0)
-                       (funcall insert-action)))))))))
-    (apply #'starhugger--query-internal prompt callback :spin t args)))
-
-(defun starhugger--complete-default-beg-position ()
-  (-->
-   (list
-    (bounds-of-thing-at-point 'line)
-    (bounds-of-thing-at-point 'paragraph)
-    (bounds-of-thing-at-point 'defun))
-   (-map #'car it)
-   (remove nil it)
-   (-min it)))
-
-;;;###autoload
-(defun starhugger-complete (&optional beginning)
-  "Insert completion using the prompt from BEGINNING to current point.
-BEGINNING defaults to start of current line, paragraph or defun,
-whichever is the furthest.
-
-Interactively, you may find `starhugger-complete*' performs
-better as it takes as much as `starhugger-max-prompt-length'
-allows, starting from buffer beginning."
-  (declare (obsolete nil "0.1.8"))
-  (interactive)
-  (-let* ((beg (or beginning (starhugger--complete-default-beg-position)))
-          (prompt (buffer-substring-no-properties beg (point))))
-    (starhugger-query prompt :beg-pos beg :end-pos (point))))
-
-;;;###autoload
-(defun starhugger-complete* ()
-  "Insert completion, use as much text as possible before point as prompt.
-Just `starhugger-complete' under the hood."
-  (declare (obsolete nil "0.1.8"))
-  (interactive)
-  (starhugger-complete (point-min)))
-
-;;; starhugger-x.el ends here
-
-(provide 'starhugger-x)
